// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<View /> 1`] = `
<div>
  <div
    class="emotion-0"
  />
</div>
`;

exports[`<View as='button'>Button</View> 1`] = `
<div>
  <button
    class="emotion-0"
  >
    Button
  </button>
</div>
`;

exports[`<View backgroundImageUrl='https://foo/bar.jpg' /> 1`] = `
.emotion-0 {
  background-image: url("https://foo/bar.jpg");
}

<div>
  <div
    class="emotion-0"
  />
</div>
`;

exports[`<View margin={10} /> 1`] = `
.emotion-0 {
  margin: 10px;
}

<div>
  <div
    class="emotion-0"
  />
</div>
`;

exports[`<View position='absolute' /> 1`] = `
.emotion-0 {
  position: absolute;
}

<div>
  <div
    class="emotion-0"
  />
</div>
`;

exports[`<View><View></View></View> 1`] = `
<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-0"
    />
  </div>
</div>
`;
